[package]
name = "familiar"
version = "0.0.1"
authors = ["Wuz <sup@wuz.fyi>"]
edition = "2018"
description = "A dark magic bash prompt"
homepage = "https://wuz.sh/familiar"
repository = "https://git.sr.ht/~wuz/familiar"
keywords = ["shell", "prompt", "dark-magin"]
license = "MIT"

[dependencies]
clap = "2.33.0"
toml = "0.5"
tico = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
git2 = "0.13"
